--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -58,9 +58,9 @@ subject: Shop all our holiday best.
         </columns>
       </row>
       <row>
-        <columns small="12" large="12">
+        <columns small="12" large="12" class="link">
           <a target="_blank" href="https://www.apple.com/apple-card/?cp=em-P0019825-438615&cid=CDM-US-DM-P0019825-438615&sr=em">
-            Learn more >
+            <p style="display: inline-block">Learn more</p><img src="https://i.imgur.com/wKIFdxK.png" alt="" style="display: inline-block">
           </a>
         </columns>
       </row>
